force-app/main/default/objects/Product_Detail_Benefit__c/Product_Detail_Benefit__c.object-meta.xml
<CustomObject>
    <label>Product Detail Benefit</label>
    <nameField>
        <label>Product Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Detail Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>