force-app/main/default/objects/Product_Detail_Benefit__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit</label>
    <referenceTo>Benefits__c</referenceTo>
    <relationshipName>Product_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>