force-app/main/default/objects/Product_Detail_Benefit__c/fields/BenefitDetail__c.field-meta.xml
<CustomField>
    <fullName>BenefitDetail__c</fullName>
    <formula>Benefit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BenefitDetail</label>
    <type>Text</type>
</CustomField>