force-app/main/default/objects/Product_Detail_Benefit__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Details</label>
    <referenceTo>Product_Details__c</referenceTo>
    <relationshipName>Product_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>