force-app/main/default/objects/Product_Detail_Benefit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Product_Details__r.Project__r.Name</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>